// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Type 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "any",
    "value": "=",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "any",
    "value": " ",
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"barbarbar\\"",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "string",
    "value": "\\"barbarbar\\"",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "any",
    "value": " ",
  },
  Object {
    "attrs": undefined,
    "code": "Ampersand",
    "display": "&",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "any",
    "value": "&",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "renderText": undefined,
    "type": "any",
    "value": " ",
  },
  Object {
    "attrs": Object {
      "id": "d986e871-cb85-4bd5-b675-87307f60b882",
      "kind": "Variable",
      "name": "foo",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Variable",
    "display": "foo",
    "errors": Array [
      Object {
        "message": "Expected string but got number",
        "type": "type",
      },
    ],
    "hide": false,
    "renderText": [Function],
    "type": "string",
    "value": "foo",
  },
]
`;

exports[`Custom Function Function dependencies 1`] = `
Array [
  Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "a",
        "type": "number",
      },
      Object {
        "name": "b",
        "type": "number",
      },
    ],
    "async": false,
    "chain": false,
    "description": "",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "attrs": undefined,
            "code": "Equal",
            "display": "=",
            "errors": Array [],
            "hide": false,
            "renderText": undefined,
            "type": "any",
            "value": "=",
          },
          Object {
            "attrs": undefined,
            "code": "NumberLiteral",
            "display": "1",
            "errors": Array [],
            "hide": false,
            "renderText": undefined,
            "type": "number",
            "value": "1",
          },
        ],
        "input": "=1",
        "output": Object {
          "result": 1,
          "type": "any",
        },
      },
    ],
    "group": "custom",
    "key": "custom::PLUS",
    "lazy": false,
    "name": "PLUS",
    "pure": true,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
]
`;

exports[`Custom Function NOW track 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                18,
                19,
                21,
                22,
              ],
              "categoryMatchesMap": Object {
                "18": true,
                "19": true,
                "21": true,
                "22": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 18,
        },
        "tokenTypeIdx": 18,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "lhs": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "simpleAtomicExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "FunctionCall": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "FunctionName": Array [
                                                                                    Object {
                                                                                      "endColumn": 4,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 3,
                                                                                      "image": "NOW",
                                                                                      "startColumn": 2,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 1,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\[a-zA-Z_\\]\\(\\(\\?!\\[,"'\`&#@:!\\$%\\^<>/\\?\\*=\\.;~\\|\\[\\(\\)\\{\\}\\+\\\\\\\\\\\\-\\\\\\]\\\\s\\]\\)\\.\\)\\*/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "FunctionName",
                                                                                        "tokenTypeIdx": 52,
                                                                                      },
                                                                                      "tokenTypeIdx": 52,
                                                                                    },
                                                                                  ],
                                                                                  "LParen": Array [
                                                                                    Object {
                                                                                      "endColumn": 5,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 4,
                                                                                      "image": "(",
                                                                                      "startColumn": 5,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 4,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\\\\\(/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "LParen",
                                                                                        "tokenTypeIdx": 37,
                                                                                      },
                                                                                      "tokenTypeIdx": 37,
                                                                                    },
                                                                                  ],
                                                                                  "RParen": Array [
                                                                                    Object {
                                                                                      "endColumn": 6,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 5,
                                                                                      "image": ")",
                                                                                      "startColumn": 6,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 5,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\\\\\)/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "RParen",
                                                                                        "tokenTypeIdx": 38,
                                                                                      },
                                                                                      "tokenTypeIdx": 38,
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "FunctionCall",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "simpleAtomicExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "atomicExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "chainExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Custom Function Plus 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                18,
                19,
                21,
                22,
              ],
              "categoryMatchesMap": Object {
                "18": true,
                "19": true,
                "21": true,
                "22": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 18,
        },
        "tokenTypeIdx": 18,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "lhs": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "simpleAtomicExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "FunctionCall": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "Arguments": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "Comma": Array [
                                                                                          Object {
                                                                                            "endColumn": 16,
                                                                                            "endLine": 1,
                                                                                            "endOffset": 15,
                                                                                            "image": ",",
                                                                                            "startColumn": 16,
                                                                                            "startLine": 1,
                                                                                            "startOffset": 15,
                                                                                            "tokenType": Object {
                                                                                              "CATEGORIES": Array [],
                                                                                              "PATTERN": /,/,
                                                                                              "categoryMatches": Array [],
                                                                                              "categoryMatchesMap": Object {},
                                                                                              "isParent": false,
                                                                                              "name": "Comma",
                                                                                              "tokenTypeIdx": 48,
                                                                                            },
                                                                                            "tokenTypeIdx": 48,
                                                                                          },
                                                                                        ],
                                                                                        "expression": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "lhs": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "lhs": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "rhs": Array [
                                                                                                            Object {
                                                                                                              "children": Object {
                                                                                                                "lhs": Array [
                                                                                                                  Object {
                                                                                                                    "children": Object {
                                                                                                                      "lhs": Array [
                                                                                                                        Object {
                                                                                                                          "children": Object {
                                                                                                                            "lhs": Array [
                                                                                                                              Object {
                                                                                                                                "children": Object {
                                                                                                                                  "lhs": Array [
                                                                                                                                    Object {
                                                                                                                                      "children": Object {
                                                                                                                                        "lhs": Array [
                                                                                                                                          Object {
                                                                                                                                            "children": Object {
                                                                                                                                              "lhs": Array [
                                                                                                                                                Object {
                                                                                                                                                  "children": Object {
                                                                                                                                                    "lhs": Array [
                                                                                                                                                      Object {
                                                                                                                                                        "children": Object {
                                                                                                                                                          "simpleAtomicExpression": Array [
                                                                                                                                                            Object {
                                                                                                                                                              "children": Object {
                                                                                                                                                                "constantExpression": Array [
                                                                                                                                                                  Object {
                                                                                                                                                                    "children": Object {
                                                                                                                                                                      "NumberLiteralExpression": Array [
                                                                                                                                                                        Object {
                                                                                                                                                                          "children": Object {
                                                                                                                                                                            "NumberLiteral": Array [
                                                                                                                                                                              Object {
                                                                                                                                                                                "endColumn": 15,
                                                                                                                                                                                "endLine": 1,
                                                                                                                                                                                "endOffset": 14,
                                                                                                                                                                                "image": "1",
                                                                                                                                                                                "startColumn": 15,
                                                                                                                                                                                "startLine": 1,
                                                                                                                                                                                "startOffset": 14,
                                                                                                                                                                                "tokenType": Object {
                                                                                                                                                                                  "CATEGORIES": Array [],
                                                                                                                                                                                  "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                                                                                                                  "categoryMatches": Array [],
                                                                                                                                                                                  "categoryMatchesMap": Object {},
                                                                                                                                                                                  "isParent": false,
                                                                                                                                                                                  "name": "NumberLiteral",
                                                                                                                                                                                  "tokenTypeIdx": 44,
                                                                                                                                                                                },
                                                                                                                                                                                "tokenTypeIdx": 44,
                                                                                                                                                                              },
                                                                                                                                                                            ],
                                                                                                                                                                          },
                                                                                                                                                                          "name": "NumberLiteralExpression",
                                                                                                                                                                        },
                                                                                                                                                                      ],
                                                                                                                                                                    },
                                                                                                                                                                    "name": "constantExpression",
                                                                                                                                                                  },
                                                                                                                                                                ],
                                                                                                                                                              },
                                                                                                                                                              "name": "simpleAtomicExpression",
                                                                                                                                                            },
                                                                                                                                                          ],
                                                                                                                                                        },
                                                                                                                                                        "name": "atomicExpression",
                                                                                                                                                      },
                                                                                                                                                    ],
                                                                                                                                                  },
                                                                                                                                                  "name": "chainExpression",
                                                                                                                                                },
                                                                                                                                              ],
                                                                                                                                            },
                                                                                                                                            "name": "multiplicationExpression",
                                                                                                                                          },
                                                                                                                                        ],
                                                                                                                                      },
                                                                                                                                      "name": "additionExpression",
                                                                                                                                    },
                                                                                                                                  ],
                                                                                                                                },
                                                                                                                                "name": "concatExpression",
                                                                                                                              },
                                                                                                                            ],
                                                                                                                          },
                                                                                                                          "name": "inExpression",
                                                                                                                        },
                                                                                                                      ],
                                                                                                                    },
                                                                                                                    "name": "compareExpression",
                                                                                                                  },
                                                                                                                ],
                                                                                                              },
                                                                                                              "name": "equalCompareExpression",
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "notExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "combineExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "expression",
                                                                                          },
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "lhs": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "lhs": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "rhs": Array [
                                                                                                            Object {
                                                                                                              "children": Object {
                                                                                                                "lhs": Array [
                                                                                                                  Object {
                                                                                                                    "children": Object {
                                                                                                                      "lhs": Array [
                                                                                                                        Object {
                                                                                                                          "children": Object {
                                                                                                                            "lhs": Array [
                                                                                                                              Object {
                                                                                                                                "children": Object {
                                                                                                                                  "lhs": Array [
                                                                                                                                    Object {
                                                                                                                                      "children": Object {
                                                                                                                                        "lhs": Array [
                                                                                                                                          Object {
                                                                                                                                            "children": Object {
                                                                                                                                              "lhs": Array [
                                                                                                                                                Object {
                                                                                                                                                  "children": Object {
                                                                                                                                                    "lhs": Array [
                                                                                                                                                      Object {
                                                                                                                                                        "children": Object {
                                                                                                                                                          "simpleAtomicExpression": Array [
                                                                                                                                                            Object {
                                                                                                                                                              "children": Object {
                                                                                                                                                                "constantExpression": Array [
                                                                                                                                                                  Object {
                                                                                                                                                                    "children": Object {
                                                                                                                                                                      "NumberLiteralExpression": Array [
                                                                                                                                                                        Object {
                                                                                                                                                                          "children": Object {
                                                                                                                                                                            "NumberLiteral": Array [
                                                                                                                                                                              Object {
                                                                                                                                                                                "endColumn": 18,
                                                                                                                                                                                "endLine": 1,
                                                                                                                                                                                "endOffset": 17,
                                                                                                                                                                                "image": "1",
                                                                                                                                                                                "startColumn": 18,
                                                                                                                                                                                "startLine": 1,
                                                                                                                                                                                "startOffset": 17,
                                                                                                                                                                                "tokenType": Object {
                                                                                                                                                                                  "CATEGORIES": Array [],
                                                                                                                                                                                  "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                                                                                                                  "categoryMatches": Array [],
                                                                                                                                                                                  "categoryMatchesMap": Object {},
                                                                                                                                                                                  "isParent": false,
                                                                                                                                                                                  "name": "NumberLiteral",
                                                                                                                                                                                  "tokenTypeIdx": 44,
                                                                                                                                                                                },
                                                                                                                                                                                "tokenTypeIdx": 44,
                                                                                                                                                                              },
                                                                                                                                                                            ],
                                                                                                                                                                          },
                                                                                                                                                                          "name": "NumberLiteralExpression",
                                                                                                                                                                        },
                                                                                                                                                                      ],
                                                                                                                                                                    },
                                                                                                                                                                    "name": "constantExpression",
                                                                                                                                                                  },
                                                                                                                                                                ],
                                                                                                                                                              },
                                                                                                                                                              "name": "simpleAtomicExpression",
                                                                                                                                                            },
                                                                                                                                                          ],
                                                                                                                                                        },
                                                                                                                                                        "name": "atomicExpression",
                                                                                                                                                      },
                                                                                                                                                    ],
                                                                                                                                                  },
                                                                                                                                                  "name": "chainExpression",
                                                                                                                                                },
                                                                                                                                              ],
                                                                                                                                            },
                                                                                                                                            "name": "multiplicationExpression",
                                                                                                                                          },
                                                                                                                                        ],
                                                                                                                                      },
                                                                                                                                      "name": "additionExpression",
                                                                                                                                    },
                                                                                                                                  ],
                                                                                                                                },
                                                                                                                                "name": "concatExpression",
                                                                                                                              },
                                                                                                                            ],
                                                                                                                          },
                                                                                                                          "name": "inExpression",
                                                                                                                        },
                                                                                                                      ],
                                                                                                                    },
                                                                                                                    "name": "compareExpression",
                                                                                                                  },
                                                                                                                ],
                                                                                                              },
                                                                                                              "name": "equalCompareExpression",
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "notExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "combineExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "expression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "Arguments",
                                                                                    },
                                                                                  ],
                                                                                  "DoubleColon": Array [
                                                                                    Object {
                                                                                      "endColumn": 9,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 8,
                                                                                      "image": "::",
                                                                                      "startColumn": 8,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 7,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /::/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "DoubleColon",
                                                                                        "tokenTypeIdx": 50,
                                                                                      },
                                                                                      "tokenTypeIdx": 50,
                                                                                    },
                                                                                  ],
                                                                                  "FunctionName": Array [
                                                                                    Object {
                                                                                      "endColumn": 7,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 6,
                                                                                      "image": "custom",
                                                                                      "startColumn": 2,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 1,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\[a-zA-Z_\\]\\(\\(\\?!\\[,"'\`&#@:!\\$%\\^<>/\\?\\*=\\.;~\\|\\[\\(\\)\\{\\}\\+\\\\\\\\\\\\-\\\\\\]\\\\s\\]\\)\\.\\)\\*/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "FunctionName",
                                                                                        "tokenTypeIdx": 52,
                                                                                      },
                                                                                      "tokenTypeIdx": 52,
                                                                                    },
                                                                                    Object {
                                                                                      "endColumn": 13,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 12,
                                                                                      "image": "PLUS",
                                                                                      "startColumn": 10,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 9,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\[a-zA-Z_\\]\\(\\(\\?!\\[,"'\`&#@:!\\$%\\^<>/\\?\\*=\\.;~\\|\\[\\(\\)\\{\\}\\+\\\\\\\\\\\\-\\\\\\]\\\\s\\]\\)\\.\\)\\*/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "FunctionName",
                                                                                        "tokenTypeIdx": 52,
                                                                                      },
                                                                                      "tokenTypeIdx": 52,
                                                                                    },
                                                                                  ],
                                                                                  "LParen": Array [
                                                                                    Object {
                                                                                      "endColumn": 14,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 13,
                                                                                      "image": "(",
                                                                                      "startColumn": 14,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 13,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\\\\\(/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "LParen",
                                                                                        "tokenTypeIdx": 37,
                                                                                      },
                                                                                      "tokenTypeIdx": 37,
                                                                                    },
                                                                                  ],
                                                                                  "RParen": Array [
                                                                                    Object {
                                                                                      "endColumn": 19,
                                                                                      "endLine": 1,
                                                                                      "endOffset": 18,
                                                                                      "image": ")",
                                                                                      "startColumn": 19,
                                                                                      "startLine": 1,
                                                                                      "startOffset": 18,
                                                                                      "tokenType": Object {
                                                                                        "CATEGORIES": Array [],
                                                                                        "PATTERN": /\\\\\\)/,
                                                                                        "categoryMatches": Array [],
                                                                                        "categoryMatchesMap": Object {},
                                                                                        "isParent": false,
                                                                                        "name": "RParen",
                                                                                        "tokenTypeIdx": 38,
                                                                                      },
                                                                                      "tokenTypeIdx": 38,
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "FunctionCall",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "simpleAtomicExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "atomicExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "chainExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Custom Function Simple cst 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                18,
                19,
                21,
                22,
              ],
              "categoryMatchesMap": Object {
                "18": true,
                "19": true,
                "21": true,
                "22": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 18,
        },
        "tokenTypeIdx": 18,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "lhs": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "AdditionOperator": Array [
                                                      Object {
                                                        "endColumn": 3,
                                                        "endLine": 1,
                                                        "endOffset": 2,
                                                        "image": "+",
                                                        "startColumn": 3,
                                                        "startLine": 1,
                                                        "startOffset": 2,
                                                        "tokenType": Object {
                                                          "CATEGORIES": Array [
                                                            Object {
                                                              "CATEGORIES": Array [],
                                                              "PATTERN": /NOT_APPLICABLE/,
                                                              "categoryMatches": Array [
                                                                25,
                                                                34,
                                                              ],
                                                              "categoryMatchesMap": Object {
                                                                "25": true,
                                                                "34": true,
                                                              },
                                                              "isParent": true,
                                                              "name": "AdditionOperator",
                                                              "tokenTypeIdx": 5,
                                                            },
                                                          ],
                                                          "PATTERN": /\\\\\\+/,
                                                          "categoryMatches": Array [],
                                                          "categoryMatchesMap": Object {},
                                                          "isParent": false,
                                                          "name": "Plus",
                                                          "tokenTypeIdx": 25,
                                                        },
                                                        "tokenTypeIdx": 25,
                                                      },
                                                    ],
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "simpleAtomicExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "constantExpression": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "NumberLiteralExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "NumberLiteral": Array [
                                                                                          Object {
                                                                                            "endColumn": 2,
                                                                                            "endLine": 1,
                                                                                            "endOffset": 1,
                                                                                            "image": "1",
                                                                                            "startColumn": 2,
                                                                                            "startLine": 1,
                                                                                            "startOffset": 1,
                                                                                            "tokenType": Object {
                                                                                              "CATEGORIES": Array [],
                                                                                              "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                              "categoryMatches": Array [],
                                                                                              "categoryMatchesMap": Object {},
                                                                                              "isParent": false,
                                                                                              "name": "NumberLiteral",
                                                                                              "tokenTypeIdx": 44,
                                                                                            },
                                                                                            "tokenTypeIdx": 44,
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "NumberLiteralExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "constantExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "simpleAtomicExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "atomicExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "chainExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                    "rhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "simpleAtomicExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "constantExpression": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "NumberLiteralExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "NumberLiteral": Array [
                                                                                          Object {
                                                                                            "endColumn": 4,
                                                                                            "endLine": 1,
                                                                                            "endOffset": 3,
                                                                                            "image": "1",
                                                                                            "startColumn": 4,
                                                                                            "startLine": 1,
                                                                                            "startOffset": 3,
                                                                                            "tokenType": Object {
                                                                                              "CATEGORIES": Array [],
                                                                                              "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                              "categoryMatches": Array [],
                                                                                              "categoryMatchesMap": Object {},
                                                                                              "isParent": false,
                                                                                              "name": "NumberLiteral",
                                                                                              "tokenTypeIdx": 44,
                                                                                            },
                                                                                            "tokenTypeIdx": 44,
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "NumberLiteralExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "constantExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "simpleAtomicExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "atomicExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "chainExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;
